homework/5.kubernetes-network/deployment-home.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.13
          ports:
            - containerPort: 5432
          capacity:
            storage: 10Gi
          accessModes:
            - ReadWriteOnce
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: "testuser-pgdata"
      volumes:
        - hostPath:
            path: "/home/docker/pgdata"
          name: testuser-pgdata
