homework/5.kubernetes-network/service.yaml
---
apiVersion: apps/v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 80
  selector:
    app: my-app
  type: ClusterIP
